src/styles/section.scss
.cl-section {
	background: #fff;
	margin-top: 10px;
	padding: 15px;
	padding-bottom: 0;
	border: 1px solid #f3f3f3;
	position: relative;
	h3 {
		margin-bottom: 12px;
		padding-bottom: 12px;
		border-bottom: 1px solid #f3f3f3;
		margin-left: -15px;
		margin-right: -15px;
		padding-left: 12px;
		padding-right: 12px;
		margin-top: -5px;
	}
	.chevron {
		float: right;
		position: relative;
		top: -7px;
		right: -8px;
		height: 28px;
	}
	.cl-section-title {
		&:hover {
			color: rgb(0, 69, 120);
		}
		cursor: pointer;
		&.only-title {
			margin-bottom: 0;
			padding: 0;
			border: none;
			padding-left: 12px;
		}
	}
}

